--- a/client/pom.xml
+++ b/client/pom.xml
@@ -74,6 +74,16 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
+
+
+
 
 
         <dependency>
