[modify]更新aes对称加密问题 windows和linux在对称加密上的算法是不一样的，故提供了两种随机key的生成方法

--- a/Server/src/main/webapp/WEB-INF/web.xml
+++ b/Server/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,20 @@
         <url-pattern>/servlet/uploadfile</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>default</servlet-name>
+        <!--把org.mortbay.jetty.servlet.DefaultServlet改成org.eclipse.jetty.servlet.DefaultServlet即可-->
+        <servlet-class>org.eclipse.jetty.servlet.DefaultServlet</servlet-class>
+        <init-param>
+            <param-name>useFileMappedBuffer</param-name>
+            <!-- 设置为false解决jetty容器启动时不能修改静态文件的问题. -->
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
 </web-app>
